--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Beatiful World</title>
 </head>
 
@@ -96,7 +96,7 @@
     </div>
 
     <img class="soundbutton paused" src="images/sound.gif" alt="Alt">
-    <audio class="audio" src="/media/ambient.mp3" loop></audio>
+    <audio class="audio" src="media/ambient.mp3" loop></audio>
 
     <script src="js/app.js"></script>
 </body>
